--- a/Cicer1-frontEnd/index.html
+++ b/Cicer1-frontEnd/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css">
     <link rel="stylesheet" href="assets/css/login.css">
     <link rel="stylesheet" href="assets/css/modal.css">
+    <link rel="stylesheet" href="assets/css/scriptLoading.css">
     <link rel="stylesheet" href="assets/css/table.css">
 </head>
 
@@ -46,6 +47,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
     <script src="assets/js/theme.js"></script>
+    <script src="assets/js/dashboard.js"></script>
     <script src="assets/js/functions.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
