--- a/Cicer1-frontEnd/index.html
+++ b/Cicer1-frontEnd/index.html
@@ -48,9 +48,9 @@
     <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
     <script src="assets/js/theme.js"></script>
     <script src="assets/js/dashboard.js"></script>
-    <script src="assets/js/functions.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <script src="assets/js/index.js"></script>
 </body>
 
 </html>
